--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Hola, soy</h3>
             <h1>Leonel Cuenca</h1>
             <h3><span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam optio excepturi totam officia debitis in reiciendis repellendus quia, maiores placeat illum, earum consequuntur deserunt eius.</p>
+            <p>Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p>
             <div class="social-media">
                 <a href="https://github.com/LeoCuenca" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/leo-cuenca/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -59,8 +59,8 @@
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mi</span></h2>
             <!-- <h3>Frontend Developer</h3> -->
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia sed eos inventore dolores quas excepturi suscipit quae odit nisi voluptate? Amet odio ducimus atque! Maxime praesentium commodi voluptatum, cum quas aliquam delectus velit distinctio molestias animi repudiandae esse ad sapiente aut ex hic pariatur quae debitis ab repellendus obcaecati nostrum?</p>
-            <a href="#" class="btn">Descargar CV</a>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, placeat, voluptate totam aliquam itaque eligendi, amet nihil distinctio voluptatem quasi excepturi incidunt? Unde, est corrupti. Iusto sequi officiis iste quaerat consectetur eos harum dolorem non odit, voluptatibus eligendi laudantium dignissimos omnis nulla modi, maiores aspernatur ipsum labore? Consectetur, minima a.</p>
+            <a href="#" class="btn cv">Descargar CV</a>
             <div class="about-skills">
                 <div class="skills-title">
                     <h2>Tecnologías</h2>
