--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             <img src="images/about.png" alt="">
         </div>
         <div class="about-content">
-            <h2 class="heading">Sobre <span>Mi</span></h2>
+            <h2 class="heading">Sobre <span>Mí</span></h2>
             <!-- <h3>Frontend Developer</h3> -->
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, placeat, voluptate totam aliquam itaque eligendi, amet nihil distinctio voluptatem quasi excepturi incidunt? Unde, est corrupti. Iusto sequi officiis iste quaerat consectetur eos harum dolorem non odit, voluptatibus eligendi laudantium dignissimos omnis nulla modi, maiores aspernatur ipsum labore? Consectetur, minima a.</p>
+            <p>He desarrollado toda mi vida profesional en ámbitos administrativos, hasta que decidí en 2020, dar un giro a mi vida y empezar a estudiar algo que realmente siempre me gusto y me llamo la atención, que es la programación en general.</p>
+            <p>Actualmente me encuentro a 7 materias de recibirme de Técnico Universitario en Programación en la Universidad Tecnológica Nacional. </p>
+            <p>Me caracterizo por ser una persona perseverante ante cualquier desafío en el ámbito laboral, tratando siempre de dar soluciones a los problemas planteados.</p>
             <a href="#" class="btn cv">Descargar CV</a>
             <div class="about-skills">
                 <div class="skills-title">
@@ -83,25 +85,24 @@
                 </div>
                 <div class="certificates-box">
                     <img src="/assets/full-stack-mini.jpg" alt="">
-                    <h1>Full Stack Python</h1>
+                    <h2>Full Stack Python</h2>
                     <p>Gob. de la Ciudad de Buenos Aires</p>
-                    <a href="">Ver</a>
+                    <a href="#">Ver</a>
                 </div>
                 <div class="certificates-box">
                     <img src="/assets/ingles-mini.png" alt="">
-                    <h1>EFSET</h1>
+                    <h2>EFSET</h2>
                     <p>Nivel C2 - Proficient</p>
-                    <a href="">Ver</a>
+                    <a href="#">Ver</a>
                 </div>
                 <div class="certificates-box">
                     <img src="/assets/reparacion-mini.jpg" alt="">
-                    <h1>Armado y Reparación de PC</h1>
+                    <h2>Armado y Reparación de PC</h2>
                     <p>Universidad Tecnológica Nacional</p>
-                    <a href="">Ver</a>
+                    <a href="#">Ver</a>
                 </div>
             </div>
         </div>
-        <!-- AGREGAR LAS TECNOLOGIAS -->
     </section>
 
     <!-- Services Section Design -->
@@ -159,158 +160,54 @@
 
             <div class="portfolio-box">
                 <img src="images/portfolio1.jpg" alt="" class="bgn">
+
+
                 <div class="portfolio-layer">
-                    <h4>The Witcher Fan Page</h4>
-                    <p>Una pagina realizada como proyecto final para la materia Laboratorio III, que contiene elementos de HTML / CSS y JavaScript</p>
+                    <h1>The Witcher Fan Page</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam at cum, debitis impedit sapiente, voluptas tempore rerum ab assumenda vitae laudantium exercitationem quae dicta. Laudantium?</p>
                     <div class="links-container">
                         <a href="#"><i class='bx bxl-github'></i></a>
                         <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
+                    </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
                             <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
                             <span class="tech-name">JavaScript</span>
                         </div>
+
                     </div>
                 </div>
+
+
             </div>
             
             <div class="portfolio-box">
                 <img src="images/portfolio2.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illum tenetur doloribus vero, sint, fugiat autem corporis similique natus dolores perferendis, vitae quo deleniti rem?</p>
-                    <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                    <div class="techs-used-container">
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
-                            <span class="tech-name">HTML</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                            <span class="tech-name">CSS</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                            <span class="tech-name">JavaScript</span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
             
             <div class="portfolio-box">
                 <img src="images/portfolio3.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illum tenetur doloribus vero, sint, fugiat autem corporis similique natus dolores perferendis, vitae quo deleniti rem?</p>
-                    <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                    <div class="techs-used-container">
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
-                            <span class="tech-name">HTML</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                            <span class="tech-name">CSS</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                            <span class="tech-name">JavaScript</span>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="images/portfolio4.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illum tenetur doloribus vero, sint, fugiat autem corporis similique natus dolores perferendis, vitae quo deleniti rem?</p>
-                    <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                    <div class="techs-used-container">
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
-                            <span class="tech-name">HTML</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                            <span class="tech-name">CSS</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                            <span class="tech-name">JavaScript</span>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="images/portfolio5.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illum tenetur doloribus vero, sint, fugiat autem corporis similique natus dolores perferendis, vitae quo deleniti rem?</p>
-                    <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                    <div class="techs-used-container">
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
-                            <span class="tech-name">HTML</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                            <span class="tech-name">CSS</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                            <span class="tech-name">JavaScript</span>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="images/portfolio6.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati illum tenetur doloribus vero, sint, fugiat autem corporis similique natus dolores perferendis, vitae quo deleniti rem?</p>
-                    <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
-                    </div>
-                    <div class="techs-used-container">
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
-                            <span class="tech-name">HTML</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                            <span class="tech-name">CSS</span>
-                        </div>
-                        <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                            <span class="tech-name">JavaScript</span>
-                        </div>
-                    </div>
-                </div>
             </div>
 
         </div>
