--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
                     <h2 data-section="about" data-value="certs">Certificaciones</h2>
                 </div>
                 <div class="certificates-box">
-                    <img src="/assets/full-stack-mini.jpg" alt="">
+                    <img src="assets/full-stack-mini.jpg" alt="">
                     <h2>Full Stack Python</h2>
                     <p>Gob. de la Ciudad de Buenos Aires</p>
-                    <a href="/assets/full-stack.jpg" data-section="about" data-value="wide" data-lightbox = "full-stack">Ver</a>
+                    <a href="assets/full-stack.jpg" data-section="about" data-value="wide" data-lightbox = "full-stack">Ver</a>
                 </div>
                 <div class="certificates-box">
-                    <img src="/assets/ingles-mini.png" alt="">
+                    <img src="assets/ingles-mini.png" alt="">
                     <h2>EFSET</h2>
                     <p>Nivel C2 - Proficient</p>
-                    <a href="/assets/ingles.jpg" data-section="about" data-value="wide" data-lightbox = "ingles">Ver</a>
+                    <a href="assets/ingles.jpg" data-section="about" data-value="wide" data-lightbox = "ingles">Ver</a>
                 </div>
                 <div class="certificates-box">
-                    <img src="/assets/reparacion-mini.jpg" alt="">
+                    <img src="assets/reparacion-mini.jpg" alt="">
                     <h2>Armado y Reparación de PC</h2>
                     <p>Universidad Tecnológica Nacional</p>
-                    <a href="/assets/reparacion.jpg" data-section="about" data-value="wide" data-lightbox = "reparacion">Ver</a>
+                    <a href="assets/reparacion.jpg" data-section="about" data-value="wide" data-lightbox = "reparacion">Ver</a>
                 </div>
             </div>
         </div>
