Errores minimos res.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css" />
-    <link href="/css/lightbox.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
 
 </head>
 
@@ -26,6 +26,7 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#contact" data-section="navbar" data-value="contact">Contacto</a>
             <div class="flags" id="flags">
+                <!-- <span>Idioma : </span> -->
                 <div class="flags-container" data-language="es">
                     <img src="images/spain.png" alt="" id="spanish">
                 </div>
@@ -37,7 +38,7 @@
     </header>
 
     <!-- Home Section Design -->
-    <section class="home" id="home">
+    <section class="home hidden" id="home">
         <div class="home-content">
             <h3 data-section="home" data-value="hi">Hola, soy</h3>
             <h1>Leonel Cuenca</h1>
@@ -55,7 +56,7 @@
     </section>
 
     <!-- About Section Design -->
-    <section class="about" id="about">
+    <section class="about hidden" id="about">
         <div class="about-img">
             <img src="images/about.png" alt="">
         </div>
@@ -216,7 +217,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="" class="bgn">
+                <img src="images/portfolio3.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>The Witcher Fan Page</h1>
                     <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
@@ -242,7 +243,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="" class="bgn">
+                <img src="images/portfolio4.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>The Witcher Fan Page</h1>
                     <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
@@ -268,7 +269,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="" class="bgn">
+                <img src="images/portfolio5.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>The Witcher Fan Page</h1>
                     <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
@@ -294,7 +295,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="" class="bgn">
+                <img src="images/portfolio6.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>The Witcher Fan Page</h1>
                     <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
@@ -364,7 +365,7 @@
     <script src="js/script.js"></script>
 
 
-    <script src="/js/lightbox-plus-jquery.min.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
     
 
 </body>
