Arreglso en LBox MQueries

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css" />
-    <link href="css/lightbox.css" rel="stylesheet" />
+
+    <link href="lightbox/css/lightbox.css" rel="stylesheet" />
 
 </head>
 
@@ -56,7 +57,7 @@
     </section>
 
     <!-- About Section Design -->
-    <section class="about hidden" id="about">
+    <section class="about" id="about">
         <div class="about-img">
             <img src="images/about.png" alt="">
         </div>
@@ -365,7 +366,7 @@
     <script src="js/script.js"></script>
 
 
-    <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="lightbox/js/lightbox-plus-jquery.min.js"></script>
     
 
 </body>
