--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#contact" data-section="navbar" data-value="contact">Contacto</a>
             <div class="flags" id="flags">
-                <!-- <span>Idioma : </span> -->
                 <div class="flags-container" data-language="es">
                     <img src="images/spain.png" alt="" id="spanish">
                 </div>
@@ -57,7 +56,7 @@
     </section>
 
     <!-- About Section Design -->
-    <section class="about" id="about">
+    <section class="about hidden" id="about">
         <div class="about-img">
             <img src="images/about.png" alt="">
         </div>
