Hidden /Home-About

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- Home Section Design -->
-    <section class="home hidden" id="home">
+    <section class="home" id="home">
         <div class="home-content">
             <h3 data-section="home" data-value="hi">Hola, soy</h3>
             <h1>Leonel Cuenca</h1>
@@ -56,7 +56,7 @@
     </section>
 
     <!-- About Section Design -->
-    <section class="about hidden" id="about">
+    <section class="about" id="about">
         <div class="about-img">
             <img src="images/about.png" alt="">
         </div>
