--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 <img src="images/portfolio2.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>Personal Portfolio</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <p data-section="portfolio" data-value="projDescription1">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
                     <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://github.com/LeoCuenca/portfolio" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="#home"><i class='bx bx-link-external'></i></a>
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
@@ -190,10 +190,10 @@
                 <img src="images/portfolio1.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1>The Witcher Fan Page</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <p data-section="portfolio" data-value="projDescription2">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
                     <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://github.com/LeoCuenca/The-Witcher-Page" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://leocuenca.github.io/The-Witcher-Page/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
@@ -215,11 +215,11 @@
             <div class="portfolio-box">
                 <img src="images/portfolio3.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>The Witcher Fan Page</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <h1>A&C Seguros</h1>
+                    <p data-section="portfolio" data-value="projDescription3"></p>
                     <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://github.com/LeoCuenca/ACSeguros" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://leocuenca.github.io/ACSeguros/" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
@@ -241,11 +241,11 @@
             <div class="portfolio-box">
                 <img src="images/portfolio4.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>The Witcher Fan Page</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <h1>Nutricionista Carla Cuenca</h1>
+                    <p data-section="portfolio" data-value="projDescription4"></p>
                     <div class="links-container">
-                        <a href="#"><i class='bx bxl-github'></i></a>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://github.com/LeoCuenca/carNutrition" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://leocuenca.github.io/carNutrition/#home" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
@@ -267,8 +267,8 @@
             <div class="portfolio-box">
                 <img src="images/portfolio5.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>The Witcher Fan Page</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <h1></h1>
+                    <p data-section="portfolio" data-value="projDescription5"></p>
                     <div class="links-container">
                         <a href="#"><i class='bx bxl-github'></i></a>
                         <a href="#"><i class='bx bx-link-external'></i></a>
@@ -293,8 +293,8 @@
             <div class="portfolio-box">
                 <img src="images/portfolio6.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>The Witcher Fan Page</h1>
-                    <p data-section="portfolio" data-value="projDescription">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                    <h1></h1>
+                    <p data-section="portfolio" data-value="projDescription6"></p>
                     <div class="links-container">
                         <a href="#"><i class='bx bxl-github'></i></a>
                         <a href="#"><i class='bx bx-link-external'></i></a>
