--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="portfolio-box">
                 <img src="images/portfolio2.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>Personal Portfolio</h1>
+                    <h1 data-section="portfolio" data-value="projName1">Portfolio Personal</h1>
                     <p data-section="portfolio" data-value="projDescription1">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
                     <div class="links-container">
                         <a href="https://github.com/LeoCuenca/portfolio" target="_blank"><i class='bx bxl-github'></i></a>
@@ -189,7 +189,7 @@
             <div class="portfolio-box">
                 <img src="images/portfolio1.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>The Witcher Fan Page</h1>
+                    <h1 data-section="portfolio" data-value="projName2">The Witcher Fan Page</h1>
                     <p data-section="portfolio" data-value="projDescription2">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
                     <div class="links-container">
                         <a href="https://github.com/LeoCuenca/The-Witcher-Page" target="_blank"><i class='bx bxl-github'></i></a>
@@ -215,8 +215,8 @@
             <div class="portfolio-box">
                 <img src="images/portfolio3.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>A&C Seguros</h1>
-                    <p data-section="portfolio" data-value="projDescription3"></p>
+                    <h1 data-section="portfolio" data-value="projName3">A&C Seguros</h1>
+                    <p data-section="portfolio" data-value="projDescription3">Pagina web realizada para una PYME que se dedica al rubro del seguro patrimonial.</p>
                     <div class="links-container">
                         <a href="https://github.com/LeoCuenca/ACSeguros" target="_blank"><i class='bx bxl-github'></i></a>
                         <a href="https://leocuenca.github.io/ACSeguros/" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -241,8 +241,8 @@
             <div class="portfolio-box">
                 <img src="images/portfolio4.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1>Nutricionista Carla Cuenca</h1>
-                    <p data-section="portfolio" data-value="projDescription4"></p>
+                    <h1 data-section="portfolio" data-value="projName4">Nutricionista Carla Cuenca</h1>
+                    <p data-section="portfolio" data-value="projDescription4">Proyecto web realizado para una nutricionista profesional, con varios cambios propuestos a futuro, esta es una primera version del sitio.</p>
                     <div class="links-container">
                         <a href="https://github.com/LeoCuenca/carNutrition" target="_blank"><i class='bx bxl-github'></i></a>
                         <a href="https://leocuenca.github.io/carNutrition/#home" target="_blank"><i class='bx bx-link-external'></i></a>
@@ -267,7 +267,7 @@
             <div class="portfolio-box">
                 <img src="images/portfolio5.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1></h1>
+                    <h1 data-section="portfolio" data-value="projName5"></h1>
                     <p data-section="portfolio" data-value="projDescription5"></p>
                     <div class="links-container">
                         <a href="#"><i class='bx bxl-github'></i></a>
@@ -293,7 +293,7 @@
             <div class="portfolio-box">
                 <img src="images/portfolio6.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
-                    <h1></h1>
+                    <h1 data-section="portfolio" data-value="projName6"></h1>
                     <p data-section="portfolio" data-value="projDescription6"></p>
                     <div class="links-container">
                         <a href="#"><i class='bx bxl-github'></i></a>
