--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             </div>
             <a href="#about" class="btn" data-section="home" data-value="read">Leer mas</a>
         </div>
+
+        <a href="#about">
+            <div class="scroll-down"></div>
+        </a>
+
     </section>
 
     <!-- About Section Design -->
@@ -333,7 +338,6 @@
                 <input type="hidden" name="access_key" value="016703bd-a3f6-48ee-a588-152497918088">
                 <input type="hidden" name="from_name" value="Personal Portfolio">
                 <input type="hidden" name="subject" value="Nuevo Mensaje del Portfolio">
-
                 <input type="text" placeholder="Nombre" name="nombre" id="name" required autocomplete="off">
                 <input type="email" placeholder="Email" name="mail" id="email" required autocomplete="off">
                 <textarea cols="30" rows="10" placeholder="Tu mensaje ..." name = "message" id="message" required></textarea>
