saque raw, agregue imagenes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1>Leonel Cuenca</h1>
             <h3><span class="multiple-text"></span></h3>
             <div class="img-cont">
-                <img class="imagen-prueba" src="/images/2.png" alt="">
+                <img class="hero" src="/images/2.png" alt="">
             </div>
             <p data-section="home" data-value="description">Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p>
             <div class="social-media">
@@ -74,17 +74,17 @@
                 <div class="skills-title">
                     <h2 data-section="about" data-value="tech">Tecnologías</h2>
                 </div>
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/c/c-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/cplusplus/cplusplus-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/csharp/csharp-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/vscode/vscode-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/visualstudio/visualstudio-plain.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/python/python-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/git/git-original.svg" class="tech" alt="">
-                <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/microsoftsqlserver/microsoftsqlserver-plain-wordmark.svg" class="tech" alt="">
+                <img src="images/html.png" class="tech" alt="html">
+                <img src="images/css.png" class="tech" alt="css">
+                <img src="images/js.png" class="tech" alt="javascript">
+                <img src="images/c.png" class="tech" alt="c">
+                <img src="images/cpp.png" class="tech" alt="cpp">
+                <img src="images/csharp.png" class="tech" alt="csharp">
+                <img src="images/vscode.png" class="tech" alt="vscode">
+                <img src="images/visualstudio.png" class="tech" alt="visualstudio">
+                <img src="images/python.png" class="tech" alt="python">
+                <img src="images/git.png" class="tech" alt="git">
+                <img src="images/sql.png" class="tech" alt="sql">
             </div>
             <div class="certificates-container">
                 <div class="certificates-title">
@@ -178,15 +178,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
@@ -204,15 +204,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
@@ -230,15 +230,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
@@ -256,15 +256,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
@@ -282,15 +282,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
@@ -308,15 +308,15 @@
                     </div> 
                     <div class="techs-used-container">
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/html5/html5-original.svg" alt="">
+                            <img src="images/html.png" alt="html">
                             <span class="tech-name">HTML</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/css3/css3-original.svg" alt="">
+                            <img src="images/css.png" alt="css">
                             <span class="tech-name">CSS</span>
                         </div>
                         <div class="tech-item">
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/javascript/javascript-original.svg" alt="">
+                            <img src="images/js.png" alt="javascript">
                             <span class="tech-name">JavaScript</span>
                         </div>
                     </div>
