--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="img-cont">
                 <img class="hero" src="/images/2.png" alt="">
             </div>
-            <p data-section="home" data-value="description">Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p>
+            <!-- <p data-section="home" data-value="description">Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p> -->
             <div class="social-media">
                 <a href="https://github.com/LeoCuenca" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/leo-cuenca/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
