reacomodamiento general pt1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="cursor-halo"></div>
     <!-- Header Design -->
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
@@ -39,9 +40,9 @@
     <!-- Home Section Design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3 data-section="home" data-value="hi">Hola, soy</h3>
-            <h1>Leonel Cuenca</h1>
-            <h3><span class="multiple-text"></span></h3>
+            <h3 class="blur-in" data-section="home" data-value="hi">Hola, soy</h3>
+            <h1 class="blur-in">Leonel Cuenca</h1>
+            <h3 class="blur-in"><span class="multiple-text"></span></h3>
             <div class="img-cont">
                 <img class="hero" src="/images/2.png" alt="">
             </div>
@@ -61,9 +62,9 @@
 
     <!-- About Section Design -->
     <section class="about" id="about">
-        <div class="about-img">
+        <!-- <div class="about-img">
             <img src="images/about.png" alt="">
-        </div>
+        </div> -->
         <div class="about-content">
             <h2 class="heading h-translate" data-section="about" data-value="aboutTitle">Sobre </h2><span  data-section="about" data-value="me">Mí</span>
             <p data-section="about" data-value="p1">He desarrollado toda mi vida profesional en ámbitos administrativos, hasta que decidí en 2020, dar un giro a mi vida y empezar a estudiar algo que realmente siempre me gusto y me llamo la atención, que es la programación en general.</p>
@@ -77,14 +78,14 @@
                 <img src="images/html.png" class="tech" alt="html">
                 <img src="images/css.png" class="tech" alt="css">
                 <img src="images/js.png" class="tech" alt="javascript">
-                <img src="images/c.png" class="tech" alt="c">
+                <!-- <img src="images/c.png" class="tech" alt="c">
                 <img src="images/cpp.png" class="tech" alt="cpp">
                 <img src="images/csharp.png" class="tech" alt="csharp">
                 <img src="images/vscode.png" class="tech" alt="vscode">
-                <img src="images/visualstudio.png" class="tech" alt="visualstudio">
+                <img src="images/visualstudio.png" class="tech" alt="visualstudio"> -->
                 <img src="images/python.png" class="tech" alt="python">
                 <img src="images/git.png" class="tech" alt="git">
-                <img src="images/sql.png" class="tech" alt="sql">
+                <!-- <img src="images/sql.png" class="tech" alt="sql"> -->
             </div>
             <div class="certificates-container">
                 <div class="certificates-title">
@@ -163,7 +164,7 @@
     <!-- Portfolio Section Design -->
     <section class="portfolio" id="portfolio">
         <div class="title-container">
-            <h2 class="heading" data-section="portfolio" data-value="some">Algunos</h2><span data-section="portfolio" data-value="projects"> Proyectos</span>
+            <h2 class="heading" data-section="portfolio" data-value="some">Mis</h2><span data-section="portfolio" data-value="projects"> Proyectos</span>
         </div>
         <div class="portfolio-container">
 
