--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div id="cursor-halo"></div>
     <!-- Header Design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">SkyDesign</a>
         <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
-            <a href="#home" class="active" data-section="navbar" data-value="home">Inicio</a>
-            <a href="#about" data-section="navbar" data-value="aboutNav">Sobre mi</a>
+            <a href="#home" class="active" data-section="navbar" data-value="home">// Inicio</a>
+            <a href="#about" data-section="navbar" data-value="aboutNav">// Sobre mi</a>
             <!-- <a href="#services">Servicios</a> -->
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact" data-section="navbar" data-value="contact">Contacto</a>
+            <a href="#portfolio">// Portfolio</a>
+            <a href="#contact" data-section="navbar" data-value="contact">// Contacto</a>
             <div class="flags" id="flags">
                 <div class="flags-container" data-language="es">
                     <img src="images/spain.png" alt="" id="spanish">
