--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://github.com/LeoCuenca" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/leo-cuenca/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
-            <a href="#about" class="btn" data-section="home" data-value="read">Leer mas</a>
+            <!-- <a href="#about" class="btn" data-section="home" data-value="read">Leer mas</a> -->
         </div>
 
         <a href="#about">
@@ -67,7 +67,7 @@
         </div> -->
         <div class="about-content">
             <h2 class="heading h-translate" data-section="about" data-value="aboutTitle">Sobre </h2><span  data-section="about" data-value="me">Mí</span>
-            <p data-section="about" data-value="p1">He desarrollado toda mi vida profesional en ámbitos administrativos, hasta que decidí en 2020, dar un giro a mi vida y empezar a estudiar algo que realmente siempre me gusto y me llamo la atención, que es la programación en general.</p>
+            <p data-section="about" data-value="p1">He desarrollado mi vida profesional en ámbitos administrativos, hasta que decidí en 2020, dar un giro y empezar a estudiar algo que realmente siempre me gusto y me llamo la atención, que es la programación en general.</p>
             <p data-section="about" data-value="p2">Actualmente me encuentro a 7 materias de recibirme de Técnico Universitario en Programación en la Universidad Tecnológica Nacional.</p>
             <p data-section="about" data-value="p3">Me caracterizo por ser una persona perseverante ante cualquier desafío en el ámbito laboral, tratando siempre de dar soluciones a los problemas planteados.</p>
             <a href="assets/CV-Cuenca-Leonel.pdf" class="btn cv" download="CV-Cuenca-Leonel.pdf"  data-section="about" data-value="cv">Descargar CV</a>
