--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <div class="background"></div>
     <div id="cursor-halo"></div>
     <!-- Header Design -->
     <header class="header">
@@ -53,12 +55,12 @@
             </div>
             <!-- <a href="#about" class="btn" data-section="home" data-value="read">Leer mas</a> -->
         </div>
-
-        <a href="#about">
+        <a class="link-test" href="#about">
             <div class="scroll-down"></div>
         </a>
-
     </section>
+
+
 
     <!-- About Section Design -->
     <section class="about" id="about">
@@ -172,7 +174,7 @@
                 <img src="images/portfolio2.jpg" alt="" class="bgn">
                 <div class="portfolio-layer">
                     <h1 data-section="portfolio" data-value="projName1">Portfolio Personal</h1>
-                    <p data-section="portfolio" data-value="projDescription1">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
+                    <p data-section="portfolio" data-value="projDescription1">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales.</p>
                     <div class="links-container">
                         <a href="https://github.com/LeoCuenca/portfolio" target="_blank"><i class='bx bxl-github'></i></a>
                         <a href="#home"><i class='bx bx-link-external'></i></a>
