--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- Portfolio Section Design -->
     <section class="portfolio" id="portfolio">
         <div class="title-container">
-            <h2 class="heading" data-section="portfolio" data-value="some">Mis</h2><span data-section="portfolio" data-value="projects"> Proyectos</span>
+            <h2 class="heading" data-section="portfolio" data-value="some">Mis<span data-section="portfolio" data-value="projects"> Proyectos</span></h2>
         </div>
         <div class="portfolio-container">
 
