--- a/index.html
+++ b/index.html
@@ -354,7 +354,14 @@
     <!-- Footer Design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2024 portfolio Leonel Cuenca | Todos los derechos reservados.</p>
+            <p>Copyright &copy; 2024 portfolio Leonel Cuenca</p>
+            <p>Todos los derechos reservados.</p>
+        </div>
+        <div class="menu-footer">
+            <a href="#home" class="footer-menu-item">Inicio</a>
+            <a href="#about" class="footer-menu-item">Sobre mi</a>
+            <a href="#portfolio" class="footer-menu-item">Portfolio</a>
+            <a href="#contact" class="footer-menu-item">Contacto</a>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
