--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="blur-in">Leonel Cuenca</h1>
             <h3 class="blur-in"><span class="multiple-text"></span></h3>
             <div class="img-cont">
-                <img class="hero" src="/images/2.png" alt="">
+                <img class="hero" src="images/2.png" alt="">
             </div>
             <!-- <p data-section="home" data-value="description">Soy un apasionado desarrollador, con una solida experiencia en diferentes lenguajes, asi como en diferentes ámbitos. Actualmente me encuentro en busca de mi primera experiencia laboral en el mundo del desarrollo.</p> -->
             <div class="social-media">
